# GDT

./: .gitignore  README.md
1_twinweaver/: README.md
1_twinweaver/dataset_generation/instruction/: slurm_instruction_dataset.sh
1_twinweaver/digital_twin_converter/common/: config.py  converter_manual_base.py  data_manager.py
1_twinweaver/digital_twin_converter/instruction/: converter_manual_events.py  converter_manual_forecasting.py  data_splitter.py  data_splitter_forecasting.py
1_twinweaver/digital_twin_converter/pretrain/: converter_manual_template.py
1_twinweaver_reference_only/: pyproject.toml
1_twinweaver_reference_only/digital_twin_converter/common/: jsonl_converter_base.py
1_twinweaver_reference_only/digital_twin_converter/instruction/: converter_manual_forecasting_qa.py  converter_manual_instruction.py  data_splitter_events.py  generate_stats.py  jsonl_converter_instruction.py
1_twinweaver_reference_only/digital_twin_converter/pretrain/: jsonl_converter.py
1_twinweaver_reference_only/digital_twin_converter/utils/: meds_importer.py
2_gdt_training/: README.md  base_loader.py
2_gdt_training/v1_llama3_finetuning_10_samples_2025_01_09/: launch_training.sh  load_fh_instruct_dataset_10.py
3_cgdb_forecasting/: README.md
3_cgdb_forecasting/1_data_generation/: main_pipeline.py  main_pipeline_subset_train.py  main_pipeline_subset_train_text.py  main_pipeline_with_text.py  utils_convert_to_df.py  utils_split_generation.py
3_cgdb_forecasting/2_forecasting_eval_utils/: generate_train_data_stats.py  utils_forecasting_eval.py
3_cgdb_forecasting/3_baselines/1_copy_forward/: copy_forward.py
3_cgdb_forecasting/3_baselines/2_chronos/: chronos_bolt_zero_shot.py  chronos_fine_tune_and_eval.py  chronos_zero_shot.py  utils_chronos.py
3_cgdb_forecasting/3_baselines/3_tide/: tide_train.py  utils_tide.py
3_cgdb_forecasting/3_baselines/4_llama/: llama_eval.py  utils_call_vllm.py  utils_llama.py
3_cgdb_forecasting/4_gdt/: gdt_eval.py  utils_call_vllm.py  utils_gdt.py
4_cgdb_events/: README.md
4_cgdb_events/1_data_generation/: main_pipeline_dfs.py  main_pipeline_splits_only.py  main_pipeline_splits_text.py  utils_convert_to_df.py  utils_split_generation.py
4_cgdb_events/2_eval_tools/: utils_events_eval.py
4_cgdb_events/4_gdt/: gdt_landmark_eval_probability.py  utils_call_vllm.py  utils_genie_dt.py
5_clinical_trials_forecasting/: README.md
5_clinical_trials_forecasting/1_data_generation/: main_pipeline.py  main_pipeline_with_text.py  utils_convert_to_df.py  utils_split_generation.py
5_clinical_trials_forecasting/2_forecasting_eval_utils/: utils_forecasting_eval.py
6_clinical_trials_events/: README.md
6_clinical_trials_events/1_data_generation/: main_pipeline_dfs_and_splits.py  main_pipeline_splits_text.py  utils_convert_to_df.py  utils_split_generation.py
6_clinical_trials_events/2_eval_tools/: utils_landmark_eval.py
6_clinical_trials_events/4_gdt/: gdt_landmark_eval_probability.py  utils_call_vllm.py
7_reasoning/: README.md
7_reasoning/1_generate_basic_data/: convert_to_text.py  generate_sft_dataset.py  post_process_sft_datasets.py  process_data.py  utils.py
7_reasoning/2_evaluate/: eval.py  utils.py  utils_call_vllm.py
7_reasoning/3_sft/: gdt_sft_pred_then_cot.py  utils.py
7_reasoning/4_grpo/: grpo_on_sft_reward_only_mae_with_norm.py  utils.py
(+27 files in other folders)
